testsuite/tests/qualified-strings/should_fail/qstrings_bad_expr.stderr
qstrings_bad_expr.hs:7:17: error: [GHC-83865]
    • Couldn't match type ‘Int’ with ‘[Char]’
      Expected: String
        Actual: Int
    • In the first argument of ‘putStrLn’, namely
        ‘Length."this fails after being converted into an Int"’
      In the expression:
        putStrLn Length."this fails after being converted into an Int"
      In an equation for ‘main’:
          main
            = putStrLn Length."this fails after being converted into an Int"
